--- a/budgeteer-api/budgeteer-api/budgeteer-api.csproj
+++ b/budgeteer-api/budgeteer-api/budgeteer-api.csproj
@@ -116,10 +116,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Budget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
