--- a/budgeteer-api/budgeteer-api.Tests/budgeteer-api.Tests.csproj
+++ b/budgeteer-api/budgeteer-api.Tests/budgeteer-api.Tests.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
@@ -49,8 +50,11 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountTest.cs" />
-    <Compile Include="BudgetTest.cs" />
+    <Compile Include="Helpers\ReflectionHelpers.cs" />
+    <Compile Include="Route Tests\RouteTest.cs" />
+    <Compile Include="Helpers\RouteTester.cs" />
+    <Compile Include="Controller Tests\AccountTest.cs" />
+    <Compile Include="Controller Tests\BudgetTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
